--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,15 @@
 }
 
 #shop{
+  height: 100vh;
+  background-color: #6b2e2e;
+}
+
+#shop-choices{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding: 20px;
 }
 
 .shop-item{
