--- a/css/style.css
+++ b/css/style.css
@@ -24,4 +24,6 @@
   text-align: center;
   cursor: pointer;
   background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
