--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 #shop{
   height: 100vh;
   background-color: #6b2e2e;
+  position: absolute;
 }
 
 #shop-choices{
@@ -33,4 +34,29 @@
   height: 50px;
   background-color: #e4e4e4;
   cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+#battle{
+  height: 100vh;
+   background-color: #0d7900;
+}
+
+.enemy{
+  margin: auto;
+  width: 300px;
+  height: 300px;
+  background-image: url("../img/enemy1.png");
+  -webkit-background-size: contain;
+  background-size: contain;
+  background-position: center;
 }
